--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ int main()
     }
     stuff.push_back(i)
 
+vector<int> row = {mathLevel, leftNum, mathSymbol, rightnum, correctAnswer};
+
 
 
     cout << "                  ************************" << endl;
